<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/setBreakTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/done_button"
        android:text="@string/done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/minutesBreakBox"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/minute_hint"
        android:inputType="number"
        android:labelFor="@id/setBreakTime"
        app:layout_constraintBottom_toTopOf="@+id/setBreakTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hoursBreakBox"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hour_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:labelFor="@id/setBreakTime"
        app:layout_constraintEnd_toStartOf="@+id/minutesBreakBox"
        app:layout_constraintTop_toTopOf="@+id/minutesBreakBox" />

    <EditText
        android:id="@+id/secondBreakBox"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/second_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:labelFor="@id/setBreakTime"
        app:layout_constraintStart_toEndOf="@+id/minutesBreakBox"
        app:layout_constraintTop_toTopOf="@+id/minutesBreakBox" />

    <ImageView
        android:id="@+id/breakTimeView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/worker_icon"
        app:layout_constraintBottom_toTopOf="@+id/minutesBreakBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_free_breakfast_24" />

</androidx.constraintlayout.widget.ConstraintLayout>